# template-python-project

./: .flake8  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml  run_and_remove.py  tox.ini
.github/workflows/: publish.yml  test.yml
